add store info in order metadata
